--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,28 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+        android:label="@string/app_name">
         <service
             android:name=".ExploitService"
             android:exported="true"
-            android:launchMode="singleTop"
             tools:ignore="ExportedService">
             <intent-filter>
                 <action android:name="com.samsung.SMT" />
-                <action android:name="com.samsung.SMT.lang.poc" />
             </intent-filter>
         </service>
     </application>
