--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,13 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
-        <service
-            android:name=".ExploitService"
+        <receiver
+            android:name="com.samsung.SMT.ExploitService"
             android:exported="true"
-            tools:ignore="ExportedService">
+            tools:ignore="ExportedReceiver">
             <intent-filter>
                 <action android:name="com.samsung.SMT" />
             </intent-filter>
-        </service>
+        </receiver>
     </application>
 </manifest>
