--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
         <receiver
-            android:name="com.samsung.SMT.ExploitService"
+            android:name="com.samsung.SMT.ExploitReceiver"
             android:exported="true"
             tools:ignore="ExportedReceiver">
             <intent-filter>
